syntax = "proto3";

import "google/protobuf/duration.proto";

package protoserver;

message ServerStarted {
  uint32 port = 1;
  uint32 http_port = 2;
  uint32 trace_port = 3;
}

message ServerFinished {
  string error = 1;
  google.protobuf.Duration duration = 2;
}
